--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,7 +18,7 @@
 {"@type":"WebSite","url":"https://lecy.github.io/political-ideology-of-nonprofits/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://lecy.github.io/political-ideology-of-nonprofits/assets/img/rep-dem.jpg"}},"headline":"Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results.","name":"Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results","description":"Replication files for the paper: Lecy, J. D., Ashley, S. R., &amp; Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. Public Performance &amp; Management Review, 42(1), 115-141.","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -40,6 +40,6 @@
     
 </div>
 
-<script src="./political-ideology_files/scale.fix.js.download"></script>
+<script src="../javascripts/scale.fix.js.download"></script>
     
 </body></html>
