--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -293,7 +293,10 @@ footer {
     
 <div class="wrapper">
       
-      <header><img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo"></header>
+      <header>
+          <img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo">
+          <p style="font-size:8;align:center;">Image source: The Economist</p>
+      </header>
       
       <section>
 
