--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -295,7 +295,7 @@ footer {
       
       <header>
           <img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo">
-          <p style="font-size:8;align:center;">Image source: The Economist</p>
+          <p style="font-size:8px;text-align:center;">Image source: The Economist</p>
       </header>
       
       <section>
