--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,10 +33,14 @@
       <section>
 
       {{content}}
+          
+       <br>
+       <a class="button" href="https://github.com/lecy/political-ideology-of-nonprofits/issues/new">Discuss</a>
 
       </section>
       
       <footer>
+          
       </footer>
     
 </div>
@@ -44,3 +48,25 @@
 <script src="../javascripts/scale.fix.js.download"></script>
     
 </body></html>
+
+
+
+<style>
+
+.button {
+  background-color: white;
+  color: #337ab7;
+  border: 1px solid black;
+  padding: 7px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #337ab7; /* blue */
+  color: white;
+}
+</style>
