--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en-US">
+
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="icon" href="https://image.flaticon.com/icons/png/128/148/148106.png">  
+    
 <!-- Begin Jekyll SEO tag v2.5.0 -->
 <title>Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. | Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results</title>
 <meta name="generator" content="Jekyll v3.7.4">
@@ -23,9 +27,30 @@
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
 <body>
+    
+<style>
+.button {
+  background-color: white;
+  color: #337ab7;
+  border: 1px solid black;
+  padding: 7px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #337ab7; /* blue */
+  color: white;
+}
+</style>
+    
+    
 <div class="wrapper">
       
       <header><img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo"></header>
@@ -51,22 +76,4 @@
 
 
 
-<style>
 
-.button {
-  background-color: white;
-  color: #337ab7;
-  border: 1px solid black;
-  padding: 7px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-.button:hover {
-  background-color: #337ab7; /* blue */
-  color: white;
-}
-</style>
