--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="icon" href="https://image.flaticon.com/icons/png/128/148/148106.png">  
+<link rel="icon" href="/assets/img/cactus.svg">  
     
 <!-- Begin Jekyll SEO tag v2.5.0 -->
 <title>Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. | Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results</title>
