--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -53,8 +53,12 @@
     
 <div class="wrapper">
       
-      <header><img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo"></header>
+      <header>
       
+      <a href="https://github.com/lecy/political-ideology-of-nonprofits">
+      <img src="https://github.com/lecy/political-ideology-of-nonprofits/blob/master/assets/img/rep-dem.jpg?raw=true" alt="Logo"></header>
+      </a>
+    
       <section>
 
       {{content}}
