--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -209,7 +209,7 @@ hr {
 
     
 .button {
-  background-color: black;
+  background-color: navy;
   color: white;
   border: 1px solid black;
   padding: 7px 32px;
