--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="https://raw.githubusercontent.com/orderedlist/minimal/master/stylesheets/styles.css">
-    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Nonprofit-Open-Data-Collective/machine_learning_mission_codes/master/docs/assets/images/robot5.png">
+    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Nonprofit-Open-Data-Collective/machine_learning_mission_codes/master/docs/assets/images/robot4.png">
 
 
   </head>
@@ -209,7 +209,7 @@ hr {
 
     
 .button {
-  background-color: navy;
+  background-color: #2E4053 ;
   color: white;
   border: 1px solid black;
   padding: 7px 32px;
