--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
     
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-rel="shortcut icon" type="image/svg" href="/assets/img/cactus.svg">  
-    
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  
 <!-- Begin Jekyll SEO tag v2.5.0 -->
-<title>Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. | Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results</title>
+<title>Lecy Ashley and Santamarina 2019</title>
 <meta name="generator" content="Jekyll v3.7.4">
 <meta property="og:title" content="Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results.">
 <meta property="og:locale" content="en_US">
